Fixed margin in row wrap QR-code

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -496,7 +496,9 @@ STYLING GJELDENDE index.php (Menyvalg)
 */
 
 .qr-code {
+    height: auto;
     width: 15rem;
+    margin: 1rem
 }
 
 .menu {
@@ -531,7 +533,7 @@ STYLING GJELDENDE index.php (Menyvalg)
     }
 
     .business-card-container{
-        font-size: medium;
+        font-size: medium; 
     }
 }
 
